tests/baselines/reference/genericClasses0.errors.txt
genericClasses0.ts(7,9): error TS2454: Variable 'v1' is used before being assigned.


==== genericClasses0.ts (1 errors) ====
    class C<T> {
    	public x: T;
    }
    
    var v1 : C<string>;
    
    var y = v1.x; // should be 'string'
            ~~
!!! error TS2454: Variable 'v1' is used before being assigned.